Flexboxen hinzugefügt und Smartphone-issue gefixt durch flex-wrap

--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@ body {
   display: flex;
   border: 1px solid black;
   justify-content: center;
-  padding: 20px; 
+  padding: 20px;
 }
 
-.menu{
+.menu {
   display: flex;
   justify-content: space-between;
-  width: 1800px;
   align-items: center;
+  width: 90%;
+}
+h1 {
+  text-align: center;
+  background-color: bisque;
 }
 
 .h1 {
@@ -24,11 +28,7 @@ body {
 
 .h1right {
   text-align: right;
-  flex: 1;
   align-self: flex-end;
-}
-.h1left {
-  flex: 1;
 }
 
 .github {
@@ -36,15 +36,19 @@ body {
   height: auto;
 }
 
-
-#img-container{
-    display: flex;
-    width: auto;
+#img-container {
+  display: flex;
+  width: auto;
+}
+.grid {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
-.img{
-    padding: 20px;
-    margin: 60px;
-    width: 300px;
-    height: auto;
+.img {
+  padding: 20px;
+  margin: 60px;
+  width: auto;
+  height: 200px;
 }
